--- a/src/com/bmSys/ui/admin/Login.form
+++ b/src/com/bmSys/ui/admin/Login.form
@@ -56,8 +56,6 @@
                           <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
-                          <Component id="jLabel7" min="-2" pref="40" max="-2" attributes="0"/>
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="btnLog" min="-2" pref="91" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="132" max="-2" attributes="0"/>
                       </Group>
@@ -89,10 +87,7 @@
                       <Component id="txtPW" alignment="0" min="-2" pref="27" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="btnLog" max="32767" attributes="0"/>
-                      <Component id="jLabel7" pref="46" max="32767" attributes="0"/>
-                  </Group>
+                  <Component id="btnLog" min="-2" pref="46" max="-2" attributes="0"/>
                   <EmptySpace pref="150" max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -148,13 +143,6 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLogActionPerformed"/>
           </Events>
-        </Component>
-        <Component class="javax.swing.JLabel" name="jLabel7">
-          <Properties>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/com/bmSys/icon/up-arrow.png"/>
-            </Property>
-          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="lblview">
           <Properties>
