--- a/src/com/bmSys/ui/employee/Home.form
+++ b/src/com/bmSys/ui/employee/Home.form
@@ -162,7 +162,6 @@
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton2MouseClicked"/>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
@@ -2811,6 +2810,7 @@
             </Component>
             <Component class="com.toedter.calendar.JDateChooser" name="txt_Transacion2_EndDate">
               <Properties>
+                <Property name="focusable" type="boolean" value="false"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="12" style="0"/>
                 </Property>
